<resources>
    <string name="app_name">Shawarma Hub</string>
    <string name="Chicken_Shawarma">Chicken Shawarma</string>
    <string name="Beef_Shawarma">Beef Shawarma</string>
    <string name="Chicken_Beef_Combo">Chicken-Beef Combo</string>
    <string name="Fish_Shawarma">Fish Shawarma</string>
    <string name="Vegan_Shawarma">Vegan Shawarma</string>
    <string name="Each_bite">Each Bite</string>
    <string name="Comes_with">Comes With</string>
    <string name="So_Much_Pleasure">So Much Pleasure!</string>
    <string name="Size">Size</string>
    <string name="Sausage">Sausages</string>
    <string name="Add_to_Cart">Add to cart</string>
    <string name="shawarma_hub">SHAWARMA HUB</string>
    <string name="Each_bite..">Each Bite Comes With So Much Pleasure!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="_200">200</string>
    <string name="naira"><sup>₦</sup></string>
    <string name="your">Your</string>
    <string name="cart">Cart</string>
    <string name="total">TOTAL</string>
    <string name="checkout">Checkout</string>
    <string name="_215">×</string>
    <string name="cont">Continue</string>
    <string name="medium">medium</string>
    <string name="small">small</string>
    <string name="large">large</string>
    <string name="one_">one</string>
    <string name="three">three</string>
    <string name="two">two</string>

    <string name="number_of_items_in_cart">8</string>
    <string name="cart_image">cart image</string>

    <string name="my_cart">My cart</string>
    <string name="shawarma_price">N1200</string>

</resources>