<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SharwamaDetailsFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:background="@drawable/header_drawable"
        app:layout_constraintTop_toTopOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:src="@drawable/ic_arrow"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:fontFamily="@font/cabin"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginStart="50dp"
                android:textStyle="bold"
                android:text="@string/Beef_Shawarma"/>

        </LinearLayout>
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/shawarma1"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/price_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/curved_bottom"
        app:layout_constraintStart_toStartOf="@id/container"
        android:weightSum="2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naira"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textColor="@color/Big_text_color"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/Big_text_color"
            android:textStyle="bold"
            android:text="@string/_200"
            android:textSize="30sp" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="150dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/decrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/decrease_drwable"
                android:padding="8dp"
                android:layout_marginEnd="5dp"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/increase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/decrease_drwable"
                android:padding="8dp"
                android:layout_marginStart="5dp"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/price_container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:text="@string/Size"
                android:textColor="@color/Small_text_color"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="6"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/small_size"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="1"
                android:alpha=".4"
                android:src="@drawable/background4"/>
            <ImageView
                android:id="@+id/medium_size"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="1"
                android:src="@drawable/background4"/>
            <ImageView
                android:id="@+id/large_size"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="1"
                android:alpha=".4"
                android:src="@drawable/background4"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sausages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/Sausage"
                    android:textColor="@color/Small_text_color"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/sausageNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="6"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/one_sausage"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_weight="1"
                    android:src="@drawable/sausage"/>
                <ImageView
                    android:id="@+id/two_sausages"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:alpha=".4"
                    android:layout_weight="1"
                    android:src="@drawable/sausages"/>
                <ImageView
                    android:id="@+id/three_sausages"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_weight="1"
                    android:alpha=".4"
                    android:src="@drawable/sausages2"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/Big_text_color"
        android:text="@string/Add_to_Cart"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/items" />

</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>