<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShawarmaMenuFragment"
    android:id="@+id/frameLayout"
    android:background="@color/Background_color">

    <SearchView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="145dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="7dp"
        android:fontFamily="@font/cabin"
        android:text="@string/Each_bite"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="35dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin"
        android:text="@string/Comes_with"
        android:textColor="@color/Big_text_color"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="35dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/cabin"
        android:text="@string/So_Much_Pleasure"
        android:textColor="@color/Big_text_color"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="76dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="28dp"
        android:src="@drawable/cart2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin"
        android:text="8"
        android:textColor="@color/Big_text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="353dp"
        tools:layout_editor_absoluteY="576dp" />

</androidx.constraintlayout.widget.ConstraintLayout>